syntax = "proto3";

option java_package = "me.index197511.mysongbank";
option java_multiple_files = true;

enum SortOrder {
  BY_ADDITION = 0;
  BY_NAME = 1;
  BY_SINGER = 2;
  BY_KEY = 3;
}

message SortPreferences {
  SortOrder sort_order = 1;
}